# doppelgangers

./: Makefile  clean-by-hash.cabal  default.nix  doppelgangers.cabal  release.nix  stack.yaml
src/: Core.hs  Main.hs
