name:                doppelgangers
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/regellosigkeitsaxiom/doppelgangers
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2015 Author Here
category:            Utility
build-type:          Simple
cabal-version:       >=1.10

executable doppelgangers
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , directory
                     , bytestring
                     , ansi-terminal
                     , cryptohash
